--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -45,7 +45,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 15%;
+    margin-top: 10px;
 }
 
 .btnLogin{   
