--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -1,7 +1,58 @@
 nav.topnav {
-padding: 12px 10px 12px 10px;
+    padding: 12px 10px 12px 10px;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
 }
 
 nav.topnav .logo-home {
-    width: 148px;
+    width: 130px;
+    min-width: 130px;
+    height: 100%;
+}
+
+nav.topnav .logo-home a div {
+    width: 100%;
+    height: 100%;
+}
+
+nav.topnav .logo-home a div img {
+    width: 100%;
+}
+
+nav.topnav ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+    margin-right: 130px;
+    flex-grow: 1;
+    display: inherit;
+    justify-content: center;
+}
+
+nav.topnav ul li {
+    padding: 0px 8px 0px 8px;
+    display: flex;
+}
+
+nav.topnav ul li a {
+    color: var(--primary);
+    text-decoration: none;
+    text-underline-offset: 6px;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: center;
+}
+
+nav.topnav ul li a.active {
+    text-decoration: underline;
+}
+
+nav.topnav ul li:nth-child(odd):hover {
+    background-color: var(--gray1);
+}
+
+nav.topnav ul div {
+    padding: 8px;
 }
