--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,15 @@ input[type=text]:focus-visible, input[type=password]:focus-visible {
 input[type=text]:focus, input[type=password]:focus {
     outline: 4px solid var(--gray1);
 }
+
+textarea{
+    height: 96px;
+    font-size: 16px;
+    font-family: 'Laila';
+    background: var(--white);
+    border: 2px solid var(--gray2);
+    border-radius: 20px;
+    padding: 0px 12px 0px 12px;
+    transition: all .2s ease-in-out;
+    outline: 0px solid var(--gray1);
+}
