#868798 create html and setup css

--- a/src/Pages/Main/Main.css
+++ b/src/Pages/Main/Main.css
@@ -1,12 +1,13 @@
+.safezoneBody{
+    display: flex;
+    flex-direction: row;
+    background-color: red;
+}
+
 .sidebar{
     display: block;
 }
 
 .msge{
     background-color: aquamarine;
-}
-
-.safezoneBody{
-    display: flex;
-    flex-direction: row;
 }
