--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@
     --gradient-pink: linear-gradient(90deg, rgba(198,36,141,1) 0%, rgba(214,120,176,1) 100%);
     --primary-transparent: rgba(15, 147, 241, 0.2);
     --secondary-transparent: rgba(247, 11, 164, 0.2);
+    --sidebar-width: 300px;
+
 
     color: var(--body);
 }
@@ -59,6 +61,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 24px;
     margin-bottom: 12px;
     font-weight: 400;
+}
+
+.sidebarContainer + .MuiContainer-root {
+    margin-left: var(--sidebar-width);
 }
 
 button {
