Sidebar style closer to finished product

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     --gray3: #99A1A5;
     --gray4: #575C5F;
     --gray5: #3B4549;
+    --background: #FBF5E9;
     --infored: #BD4E48;
     --gradient-blue: linear-gradient(90deg, rgba(28,87,129,1) 0%, rgba(96,150,188,1) 100%);
     --gradient-pink: linear-gradient(90deg, rgba(198,36,141,1) 0%, rgba(214,120,176,1) 100%);
