--- a/src/Pages/Safezone/VideoCall/VideoCall.css
+++ b/src/Pages/Safezone/VideoCall/VideoCall.css
@@ -6,11 +6,13 @@
     z-index: 1;
     position: relative;
     bottom: 18px;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
-.videoCall .videoControls button {
-    margin: auto;
+.videoCall .videoControls > * {
     display: block;
+    margin: 0px 10px 0px 10px;
 }
 
 .videoCall .videoContainer {
