--- a/src/index.css
+++ b/src/index.css
@@ -75,18 +75,31 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: var(--sidebar-width);
 }
 
-button {
-    height: 36px;
-    width: fit-content;
+button, select {
     font-family: 'Laila';
     font-weight: 600;
-    color: var(--body);
-    background-color: var(--white);
-    border: 2px solid var(--body);
-    cursor: pointer;
+
+    color: var(--white);
+    background: var(--gradient-blue);
+    background-color: var(--primary);
+    height: 36px;
+
+    width: fit-content;
+    max-width: 200px;
+    padding: 0px 24px 0px 24px;
+
     border-radius: 24px;
-    padding: 0px 36px 0px 36px;
+    border: none;
+
+    cursor: pointer;
     transition: 0.2s;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+button.primary:hover, button:hover, select:hover {
+    background: var(--primary);
 }
 
 button.iconButton {
@@ -102,17 +115,7 @@ button.iconButton > svg {
     display: flex;
 }
 
-button.primary, button {
-    background: var(--gradient-blue);
-    border: none;
-    color: var(--white);
-}
-
-button.primary:hover, button:hover {
-    background: var(--primary);
-}
-
-button.primary-stroke:not(:disabled) {
+button.primary-stroke:not(:disabled), select.primary-stroke:not(:disabled) {
     color: var(--primary);
     background-image: var(--gradient-blue);
     border: 3px solid transparent;
@@ -120,23 +123,27 @@ button.primary-stroke:not(:disabled) {
     background-origin: border-box;
 }
 
-button.primary-stroke:hover:not(:disabled), button.secondary-stroke:hover:not(:disabled) {
+button.primary-stroke:hover:not(:disabled), button.secondary-stroke:hover:not(:disabled),
+select.primary-stroke:hover:not(:disabled), select.secondary-stroke:hover:not(:disabled) {
     box-shadow: none;
     color: var(--white);
 }
 
-button.secondary {
+button.secondary, 
+select.secondary {
     background: var(--gradient-pink);
     background-color: var(--secondary);
     border: none;
     color: var(--white);
 }
 
-button.secondary:hover {
+button.secondary:hover, 
+select.secondary:hover {
     background: var(--secondary);
 }
 
-button.secondary-stroke {
+button.secondary-stroke, 
+select.secondary-stroke {
     color: var(--secondary);
     background-image: var(--gradient-pink);
     border: 3px solid transparent;
@@ -161,10 +168,38 @@ button.error-stroke.iconButton {
     padding: 6px 6px 6px 6px;
 }
 
-button:disabled {
+button:disabled,
+select:disabled {
     background: var(--gray1);
     border-color: var(--gray2);
-    color: var(--gray2)
+    color: var(--gray2);
+}
+
+
+select:focus-within { outline: none;}
+
+select {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+select option {
+    appearance: none;
+    -webkit-appearance: none;
+
+    height: 36px;
+    width: fit-content;
+    max-width: 250px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    font-family: 'Laila';
+    font-weight: 600;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    color: var(--body);
+    background-color: var(--white);
 }
 
 input[type=text], input[type=password] {
