Basic leave for call. Cannot rejoin

--- a/src/Pages/Safezone/VideoCall/VideoCall.css
+++ b/src/Pages/Safezone/VideoCall/VideoCall.css
@@ -36,6 +36,12 @@
     height: 100px;
 }
 
+.videoCall .videoContainer li {
+    list-style: none;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .videoCall .videoContainer video {
     margin-top: auto;
     margin-bottom: auto;
