--- a/src/Components/Sidebar/SidebarLeft/SidebarLeft.css
+++ b/src/Components/Sidebar/SidebarLeft/SidebarLeft.css
@@ -12,6 +12,12 @@
     overflow: visible;
 }
 
+.sidebar-left > span {
+    width: 100%;
+    aspect-ratio: 1/1;
+    margin-bottom: 8px;
+}
+
 .sidebar-left div:first-child {
     flex-grow: 1;
     overflow-y: scroll;
@@ -32,6 +38,6 @@
     display: none;
 }
 
-.sidebar-left > .iconWrapper:not(:last-child) {
+.sidebar-left .iconWrapper:not(:last-child) {
     margin-bottom: 8px;
 }
