--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -1,3 +1,9 @@
+body #root .pageContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 nav.topnav {
     padding: 12px 10px 12px 10px;
     width: 100%;
@@ -10,6 +16,16 @@ nav.topnav .logo-home {
     width: 130px;
     min-width: 130px;
     height: 100%;
+}
+
+nav.topnav .logo-home > a {
+    transition: 100ms;
+    opacity: 100;
+}
+
+nav.topnav .logo-home > a.active {
+    opacity: 0;
+    cursor: default;
 }
 
 nav.topnav .logo-home a div {
