--- a/src/Components/Chat/Message/Message.css
+++ b/src/Components/Chat/Message/Message.css
@@ -1,47 +1,49 @@
-.message{
+.message {
+    list-style-type: none;
+    margin-top: 10px;
+}
+.message .smartIcon {
+    width: 52px;
+    height: 52px;
+    min-width: 52px;
+    min-height: 52px;
+}
+
+.message > div {
     display: flex;
-    flex-direction: column; 
 }
 
-.sendMessage{
-/* flex-direction: row; */
-background-color: blue;
-margin: 5px;
-
-
-}
-
-.recievedMessage{
-    background-color: red;
-    flex-direction: row-reverse;
-    align-items: flex-end;
-
-
-}
-
-.userNameChat{
-
-}
-
-.iconAndMsg{ 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: -15px;
-}
-
-.UserIcon{
-    height: 35px;
-    width: 35px;
-    background-color: aquamarine;
+.message p {
+    margin: 0px;
+    margin-right: 30px;
+    margin-left: 10px;
+    padding: 10px 15px;
+    background-color: var(--gray1);
+    max-width: 500px;
     border-radius: 20px;
-    padding: 5px;
 }
 
-.messageContent{
-    background-color: #F4F4F4;
-    padding: 10px;
-    border-radius: 20px;
-    width: auto;
-    margin-left: 5px;
+.message label {
+    display: block;
+    margin: 0px;
+    padding-left: 75px;
+}
+
+.message.owned > div {
+    flex-flow: row-reverse;
+    margin-left: 30px;
+}
+
+.message.owned label {
+    width: 100%;
+    text-align: right;
+    padding-left: 0px;
+    padding-right: 75px;
+}
+
+.message.owned p {
+    margin-right: 10px;
+    margin-left: 30px;
+    color: var(--white);
+    background: var(--gradient-pink);
 }
