--- a/src/Components/ButtonGroup/ButtonGroup.css
+++ b/src/Components/ButtonGroup/ButtonGroup.css
@@ -35,6 +35,11 @@
     border-radius: 0px 24px 24px 0px;
 }
 
+.buttonGroup > button:only-child,
+.buttonGroup > select:only-child {
+    border-radius: 24px 24px 24px 24px;
+}
+
 .buttonGroup > button.primary:nth-child(odd),
 .buttonGroup > select.primary:nth-child(odd) {
     background: var(--gradient-blue-mirrored);
