--- a/src/Components/Sidebar/SidebarMain/SidebarMain.css
+++ b/src/Components/Sidebar/SidebarMain/SidebarMain.css
@@ -2,11 +2,6 @@
     display: flex;
     flex-direction: column;
 }
-.sidebar-right .userList {
-    padding: 10px;
-    flex-grow: 1;
-}
-
 .sidebar-right h2 {
     margin: 0px;
     padding: 10px;
@@ -64,4 +59,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.sidebar-right .userList {
+    padding: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
