--- a/src/Components/Sidebar/SidebarMain/SidebarMain.css
+++ b/src/Components/Sidebar/SidebarMain/SidebarMain.css
@@ -67,3 +67,26 @@
     display: flex;
     flex-direction: column;
 }
+
+.sidebar-right .userList ul {
+    padding: 0px;
+}
+
+.sidebar-right .userList li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+}
+
+.sidebar-right .userList .smartIcon {
+    width: 50px;
+    height: 50px;
+}
+
+.sidebar-right .userList p {
+    width: 100%;
+    margin-left: 10px;
+    overflow-x: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
