Fixed chat styleing

--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -1,22 +1,22 @@
 .chat {
-    flex-grow: 1;
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .chat > ul {
     padding: 0px 16px;
     margin: 0px;
-    flex-grow: 1;
     overflow-y: scroll;
     display: flex;
     flex-direction: column-reverse;
+    flex: 1 1 auto;
 }
 
 .chat form {
-    height: 71px;
-    margin-top: 20px;
-    padding: 0px 16px;
+    flex: 0 1 71px;
+    padding: 17px 16px;
     display: flex;
     align-items: center;
     border-top: 2px solid var(--gray2);
