--- a/src/Components/VideoCall/VideoCall.css
+++ b/src/Components/VideoCall/VideoCall.css
@@ -1,5 +1,7 @@
 .videoCall {
     width: 100%;
+    position: relative;
+    z-index: 1;
     flex: 0 0 fit-content;
 }
 
@@ -17,7 +19,8 @@
 }
 
 .videoCall .videoContainer {
-    height: 60%;
+    height: 240px;
+    max-width: 100vw;
     transition: 1s;
 
     background: rgb(96, 150, 188);
@@ -26,7 +29,8 @@
     display: flex;
     justify-content: center;
     align-items: middle;
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: visible;
 }
 
 .videoCall .videoContainer::-webkit-scrollbar {
@@ -54,10 +58,14 @@
     object-fit: cover;
 }
 
-.videoCall video.cameraView {
-    position: relative;
-    top: -15px;
-    left: 20px;
+.cameraView {
+    position: absolute;
+    width: 200px;
+    top: 280px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 1;
     filter: drop-shadow(3px 3px 3px var(--gray4));
 }
